Step C.2: uncertainty-based coverage and probability-based half-guards